[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Domino/DominoPalette/DominoPaletteVert.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Domino/DominoPalette/DominoPaletteRouge.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Domino/DominoPalette/DominoPaletteJaune.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Domino/DominoPalette/DominoPaletteRose.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Domino/DominoPalette/DominoPaletteBleu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Edition.gd" type="Script" id=7]
[ext_resource path="res://Graphics/Jouer.svg" type="Texture" id=8]
[ext_resource path="res://Graphics/Enregistrer.svg" type="Texture" id=9]
[ext_resource path="res://Graphics/Televerser.svg" type="Texture" id=10]
[ext_resource path="res://Graphics/Plus.svg" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.117647, 0.176471, 0.905882, 1 )
border_color = Color( 0.482353, 0.588235, 0.960784, 1 )
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0901961, 0.466667, 1, 1 )
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.482353, 0.588235, 0.960784, 1 )
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.117647, 0.176471, 0.905882, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0901961, 0.466667, 1, 1 )
border_color = Color( 0.0901961, 0.466667, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.482353, 0.588235, 0.960784, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Fond" type="Node2D"]
script = ExtResource( 7 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="PanelCouleurFond" type="ColorRect" parent="."]
margin_left = -1.0
margin_right = 1023.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 465, 503 )
mouse_filter = 2
color = Color( 0.698039, 0.854902, 1, 1 )

[node name="PanelFond" type="ColorRect" parent="."]
margin_left = 97.0
margin_top = 115.0
margin_right = 97.0
margin_bottom = 115.0
color = Color( 0, 0.345098, 0.996078, 1 )

[node name="PanelObjectif" type="ColorRect" parent="PanelFond"]
unique_name_in_owner = true
margin_left = 50.0
margin_top = 185.0
margin_right = 672.0
margin_bottom = 297.0
rect_pivot_offset = Vector2( 172, 41 )
mouse_filter = 1

[node name="ObjectifPoint" type="Position2D" parent="PanelFond/PanelObjectif"]
unique_name_in_owner = true
position = Vector2( 30, 55 )

[node name="PanelRegles" type="ColorRect" parent="PanelFond"]
unique_name_in_owner = true
margin_left = 688.0
margin_top = -81.0
margin_right = 908.0
margin_bottom = 410.0
mouse_filter = 1

[node name="ReglePoint" type="Position2D" parent="PanelFond/PanelRegles"]
unique_name_in_owner = true
position = Vector2( 5, 8 )

[node name="PanelPalette" type="ColorRect" parent="PanelFond"]
margin_left = -86.0
margin_top = -80.0
margin_right = 40.0
margin_bottom = 455.0
mouse_filter = 2

[node name="DominoPaletteBleu" parent="PanelFond/PanelPalette" instance=ExtResource( 5 )]
position = Vector2( 62, 69 )
scale = Vector2( 1, 1 )

[node name="DominoPaletteVert" parent="PanelFond/PanelPalette" instance=ExtResource( 1 )]
position = Vector2( 62, 269 )
scale = Vector2( 1, 1 )

[node name="DominoPaletteRouge" parent="PanelFond/PanelPalette" instance=ExtResource( 2 )]
position = Vector2( 62, 169 )
scale = Vector2( 1, 1 )

[node name="DominoPaletteRose" parent="PanelFond/PanelPalette" instance=ExtResource( 4 )]
position = Vector2( 62, 469 )
scale = Vector2( 1, 1 )

[node name="DominoPaletteJaune" parent="PanelFond/PanelPalette" instance=ExtResource( 3 )]
position = Vector2( 62, 369 )
scale = Vector2( 1, 1 )

[node name="PanelBase" type="ColorRect" parent="PanelFond"]
unique_name_in_owner = true
margin_left = 50.0
margin_top = 33.0
margin_right = 675.0
margin_bottom = 142.0
rect_pivot_offset = Vector2( 172, 41 )
mouse_filter = 1

[node name="BasePoint" type="Position2D" parent="PanelFond/PanelBase"]
unique_name_in_owner = true
position = Vector2( 30, 55 )

[node name="AjouterRegle" type="Button" parent="."]
margin_left = 863.0
margin_top = 534.0
margin_right = 923.0
margin_bottom = 594.0
hint_tooltip = "Ajouter une r√®gle"
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
icon = ExtResource( 11 )
icon_align = 1

[node name="BSauvegarder" type="Button" parent="."]
margin_left = 207.0
margin_top = 442.0
margin_right = 327.0
margin_bottom = 562.0
hint_tooltip = "Sauvegarder le niveau"
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 2 )
icon = ExtResource( 9 )
icon_align = 1

[node name="BCharger" type="Button" parent="."]
margin_left = 587.0
margin_top = 442.0
margin_right = 707.0
margin_bottom = 562.0
hint_tooltip = "Charger un niveau"
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 2 )
icon = ExtResource( 10 )
icon_align = 1

[node name="BJouer" type="Button" parent="."]
margin_left = 392.0
margin_top = 442.0
margin_right = 512.0
margin_bottom = 562.0
hint_tooltip = "Jouer le niveau"
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 2 )
icon = ExtResource( 8 )
icon_align = 1

[connection signal="base_activer" from="." to="." method="_on_Fond_base_activer"]
[connection signal="gui_input" from="PanelFond/PanelObjectif" to="." method="_on_PanelObjectif_gui_input"]
[connection signal="click_domino_bleu" from="PanelFond/PanelPalette/DominoPaletteBleu" to="." method="_on_DominoPaletteBleu_click_domino_bleu"]
[connection signal="click_domino_vert" from="PanelFond/PanelPalette/DominoPaletteVert" to="." method="_on_DominoPaletteVert_click_domino_vert"]
[connection signal="click_domino_rouge" from="PanelFond/PanelPalette/DominoPaletteRouge" to="." method="_on_DominoPaletteRouge_click_domino_rouge"]
[connection signal="click_domino_rose" from="PanelFond/PanelPalette/DominoPaletteRose" to="." method="_on_DominoPaletteRose_click_domino_rose"]
[connection signal="click_domino_jaune" from="PanelFond/PanelPalette/DominoPaletteJaune" to="." method="_on_DominoPaletteJaune_click_domino_jaune"]
[connection signal="gui_input" from="PanelFond/PanelBase" to="." method="_on_PanelBase_gui_input"]
[connection signal="pressed" from="AjouterRegle" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="AjouterRegle" to="." method="_on_Button_toggled"]
[connection signal="pressed" from="BSauvegarder" to="." method="_on_BSauvegarder_pressed"]
[connection signal="pressed" from="BCharger" to="." method="_on_BCharger_pressed"]
[connection signal="pressed" from="BJouer" to="." method="_on_BJouer_pressed"]
